// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analysis GO options panel with advanced options hidden should match snapshot 1`] = `
<div
  className="analysis-option"
>
  <div
    className="analysis-option__help"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f05a",
            "M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z",
          ],
          "iconName": "info-circle",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
     
    <span>
      Gene Ontology (GO) analysis is performed using
       
      <a
        href="https://biit.cs.ut.ee/gprofiler/"
        rel="noopener noreferrer"
        target="_blank"
      >
        g:Profiler
      </a>
      . Please see their help for descriptions of the options below.
    </span>
  </div>
  <Organism
    handleSelect={[Function]}
  />
  <Database
    form={Object {}}
    handleCheckbox={[Function]}
    handleGoCheckbox={[Function]}
  />
  <div
    className="anaylsis-option__advanced"
  >
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
    >
      Show advanced
    </Button>
  </div>
</div>
`;

exports[`Analysis GO options panel with advanced options shown should match snapshot 1`] = `
<div
  className="analysis-option"
>
  <div
    className="analysis-option__help"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f05a",
            "M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z",
          ],
          "iconName": "info-circle",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
     
    <span>
      Gene Ontology (GO) analysis is performed using
       
      <a
        href="https://biit.cs.ut.ee/gprofiler/"
        rel="noopener noreferrer"
        target="_blank"
      >
        g:Profiler
      </a>
      . Please see their help for descriptions of the options below.
    </span>
  </div>
  <Organism
    handleSelect={[Function]}
  />
  <Database
    form={Object {}}
    handleCheckbox={[Function]}
    handleGoCheckbox={[Function]}
  />
  <div
    className="anaylsis-option__advanced"
  >
    <Button
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
    >
      Hide advanced
    </Button>
    <Advanced
      form={Object {}}
      handleCheckbox={[Function]}
      handleInput={[Function]}
      handleSelect={[Function]}
    />
  </div>
</div>
`;
